--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     volumes:
       - ./db/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql:ro
       - ./db/create_extensions.sql:/docker-entrypoint-initdb.d/create_extensions.sql:ro
+    command: ["postgres", "-c", "log_statement=all"]
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     environment:
